--- a/app/views/admin/products/edit.html.erb
+++ b/app/views/admin/products/edit.html.erb
@@ -1,4 +1,4 @@
-<h3>Add a product</h3>
+<h3>Edit a product</h3>
 
 <br>
 
@@ -7,7 +7,13 @@
   <%= f.input :description %>
   <%= f.input :price %>
   <%= f.input :quantity %>
+
+  <% if @product.image.present? >
+    <%= image_tag(@product.image.thumb.url) %>
+  <% end >
+
   <%= f.input :image, as: :file %>
 
-  <%= f.submit "Submit", data: { disable_with: "Submitting..." } %>
+
+  <%= f.submit "Submit" %>
 <% end %>
