--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -11,13 +11,13 @@
 
   <thead>
     <tr>
-      <td>#</td>
-      <td>品名</td>
-      <td>描述</td>
-      <td>库存</td>
-      <td>价格</td>
-      <td>选项</td>
-      <td>创建时间</td>
+      <th>#</th>
+      <th>品名</th>
+      <th>照片</th>
+      <th>库存</th>
+      <td>价格</th>
+      <th>选项</th>
+
     </tr>
   </thead>
 
@@ -31,7 +31,13 @@
         <%= product.title %>
       </td>
       <td>
-        <%= product.description %>
+          <%= link_to product_path(product) do %>
+            <% if product.image.present? %>
+              <%= image_tag(product.image.thumb.url, class: "thumbnail") %>
+            <% else %>
+              <%= image_tag("http://placehold.it/200x200&text=No Pic", class: "thumbnail") %>
+            <% end %>
+          <% end %>
       </td>
       <td>
         <%= product.quantity %>
@@ -42,9 +48,6 @@
       <td>
         <%= link_to("Edit", edit_admin_product_path(product)) %> |
         <%= link_to("Destroy", admin_product_path(product), :method => :delete) %>
-      </td>
-      <td>
-        <%= product.created_at %>
       </td>
     </tr>
     <% end %>
