--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -1,7 +1,7 @@
 <h2>Product List</h2>
 
 <div class="pull-right">
-  <%= link_to("Add a job", new_admin_product_path, :class => "btn btn-default") %>
+  <%= link_to("Add a product", new_admin_product_path, :class => "btn btn-primary") %>
 </div>
 
 <br>
@@ -47,7 +47,7 @@
       </td>
       <td>
         <%= link_to("Edit", edit_admin_product_path(product)) %> |
-        <%= link_to("Destroy", admin_product_path(product), :method => :delete) %>
+        <%= link_to("Destroy", admin_product_path(product), :method => :delete, data: {:confirm => "Are you sure?"}) %>
       </td>
     </tr>
     <% end %>
