--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -1,4 +1,7 @@
 <h3>购物车</h3>
+
+  <%= link_to("清空购物车", clean_carts_path, method: :delete, class: "btn btn-danger pull-right", data: {confirm: "Are you sure?"} ) %>
+
 <br>
 <table class="table table-bordered">
   <thead>
@@ -39,7 +42,9 @@
 </table>
 
 <div class="total clearfix">
-  <span class="pull-right">总计 XXX RMB</span>
+  <span class="pull-right">
+      总计<%= render_cart_total_price(current_cart) %>PMB
+  </span>
 </div>
 
 <hr>
