--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -40,7 +40,7 @@
           <% end %>
       </td>
       <td>
-        <%= product.quantity %>
+          <%= cart_item.quantity %>
       </td>
       <td>
         <%= product.price %>
