--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -10,6 +10,7 @@
       <th>商品名称</th>
       <th>单价</th>
       <th>数量</th>
+      <th>选项</th>
     </tr>
   </thead>
 
@@ -33,7 +34,15 @@
           <%=cart_item.product.price %>
         </td>
         <td>
-          <%=cart_item.quantity %>
+          <%= form_for cart_item, url: cart_item_path(cart_item.product_id) do |f| %>
+            <%= f.select :quantity, [1,2,3,4,5] %>
+            <%= f.submit "Update", data: {disable_with: "Submiting..."} %>
+          <% end %>
+        </td>
+        <td>
+          <%= link_to cart_item_path(cart_item.product_id), method: :delete , data: {confirm: "Are you sure?"} do %>
+            <i class="fa fa-trash"></i>
+          <% end %>
         </td>
       </tr>
     <% end %>
