--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -17,8 +17,7 @@
                   <% if !current_user %>
                   <li><%= link_to("注册", new_user_registration_path) %> </li>
                   <li><%= link_to(content_tag(:i, '登入', class: 'fa fa-sign-in'), new_user_session_path) %></li>
-                <% else %>
-
+                <% else %>    
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                           Hi!, <%= current_user.email %>
@@ -26,12 +25,15 @@
                         </a>
                         <ul class="dropdown-menu">
                            <% if current_user.admin? %>
+                           <li>
+                             <%= link_to(content_tag(:i, '登出', class: 'fa fa-sign-out'), destroy_user_session_path, method: :delete) %>
+                           </li>
                              <li>
                                <%= link_to("Admin 选单", admin_products_path ) %>
                              </li>
                            <% end %>
                             <li>
-                              <%= link_to(content_tag(:i, '登出', class: 'fa fa-sign-out'), destroy_user_session_path, method: :delete) %>
+                              <%= link_to("我的订单", account_orders_path) %>
                             </li>
                         </ul>
                   </li>
