--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -65,7 +65,7 @@
 
     <div class="pull-left">
       <% if @order.order_placed? || @order.paid? %>
-      <%= link_to("申请取消订单"， apply_to_cancel_order_path(@order), mthod: :post, class: "btn btn-info") %>
+      <%= link_to("申请取消订单", apply_to_cancel_order_path(@order), method: :post, class: "btn btn-info") %>
       <% end %>
     </div>
 
@@ -76,7 +76,7 @@
         <%= link_to("Pay With Alipay", pay_with_alipay_order_path(@order.token), method: :post, class: "btn btn-danger pull-right") %>
     </div>
     <% else %>
-      "该商品已完成付款！"
+      <span class="pull-right">"该商品已完成付款！"</span>
     <% end %>
 
   </div>
